// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#005B8D",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        LABEL
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "400",
          "lineHeight": 35,
          "marginBottom": 10,
        }
      }
    >
      Venezuela shows how Corbyn’s socialism works
    </Text>
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <ArticleFlags />
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
</Link>
`;

exports[`2. tile b 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`3. tile c 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 10,
          "width": "100%",
        }
      }
    >
      <Image />
    </View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 5,
            "paddingBottom": 5,
            "paddingTop": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`4. tile d 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "45%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 5,
          "width": "55%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 10,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`5. tile e 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "45%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 5,
          "width": "55%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`6. tile f 1`] = `
<Link>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#005B8D",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        LABEL
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "400",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      Venezuela shows how Corbyn’s socialism works
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 19,
          "lineHeight": 21,
          "paddingBottom": 10,
        }
      }
    >
      Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <ArticleFlags />
    </View>
  </View>
</Link>
`;

exports[`7. tile g 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#FFFFFF",
          "borderWidth": 1,
          "overflow": "hidden",
          "width": "30%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingTop": 5,
          "width": "70%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 5,
            "paddingBottom": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`8. tile i 1`] = `
<Link>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "paddingBottom": 25,
        "paddingHorizontal": 40,
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#005B8D",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        LABEL
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "400",
          "lineHeight": 35,
          "marginBottom": 5,
          "textAlign": "center",
        }
      }
    >
      Venezuela shows how Corbyn’s socialism works
    </Text>
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <ArticleFlags />
    </View>
  </View>
</Link>
`;

exports[`9. tile j 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.33%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 5,
          "width": "66.66%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 10,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`10. tile l 1`] = `
<Link>
  <View
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 11,
            "marginTop": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`11. tile m 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 10,
        "paddingHorizontal": 40,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 5,
            "marginTop": 20,
            "textAlign": "center",
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 14,
            "lineHeight": 20,
            "paddingBottom": 10,
            "textAlign": "center",
          }
        }
      >
        Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`12. tile n 1`] = `
<Link>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingTop": 5,
          "width": "50%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#CCC",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <Text
        style={
          Object {
            "color": "#CCC",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`13. tile o 1`] = `
<Link>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "paddingHorizontal": 12,
        "paddingVertical": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#CCC",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "400",
            "lineHeight": 22,
            "marginBottom": 11,
            "marginTop": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;
